fix styles: align titles

--- a/src/app/features/credential-issuance/components/credential-issuance/credential-issuance.component.scss
+++ b/src/app/features/credential-issuance/components/credential-issuance/credential-issuance.component.scss
@@ -69,7 +69,7 @@
     margin-top:0px;
   }
   h2{
-    margin-top:0.8rem;
+    margin-top: 16px;
   }
 
   mat-card {
@@ -87,9 +87,8 @@
   mat-form-field {
     width: 100%;
   }
-  .nationality {
-    display: flex;
-    flex-direction: column;
+  h2{
+    margin-top: 0px;
   }
   app-dynamic-field{
     display: block;
